# fuzzy-funicular

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.py  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
cmake/: AddDeps.cmake
cmake/modules/: Findpyarrow.cmake
docs/: Design.md  Development.md  PackagingAndRelease.md  ProjectStructure.md
jsda/: .gitignore  __init__.py  jsda.py
jsda/aggregators/: __init__.py  basic_statistics.py  column_aggregator.py  variance.py
jsda/loaders/: __init__.py  csv_loader.py  data_core_loader.py  data_loader.py  parquet_loader.py
jsda_cpp/: .gitignore  CMakeLists.txt
jsda_cpp/include/jsda/: Aggregators.hpp  Loaders.hpp
jsda_cpp/src/: CsvLoader.cpp  VarianceAggregator.cpp
jsda_cpp/src/bindings/: Module.cpp
jsda_cpp/tests/: CMakeLists.txt  VarianceAggregator.cpp
scripts/: git-clang-format.py  pre-commit
tests/: aggregator_test.py  variance_aggregator_test.py
