[project]
name = "jsda"
version = "0.1.0"
dependencies = [
    "numpy",
    "pandas",
    "pyarrow==8.0.1",
]
requires-python = "==3.10"
readme = "README.md"

[[project.authors]]
name = "Sirui Mu"
email = "sirui.mu@general-int.com"

[build-system]
requires = ["setuptools", "pyarrow==8.0.1"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["jsda", "jsda.*"]
